--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ regex = "1.10"
 rand = "0.8"
 headers = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 tempfile = "3.0"
