--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ tokio = { version = "1.46.1", features = ["full"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.132"
 mongodb = "3.1.0"
-bson = { version = "2.13.0", features = ["chrono-0_4"] }
+bson = "2.13.0"
 uuid = { version = "1.11.0", features = ["v4", "serde"] }
-chrono = { version = "0.4.38", features = ["serde"] }
+jiff = { version = "0.1.13", features = ["serde"] }
 futures = "0.3.31"
 anyhow = "1.0.94"
 thiserror = "2.0.8"
